hphp/test/slow/finally/try_finally_008.php.expectf
Fatal error: `break;` is not allowed as a top-level statement in a `finally` block in %s/try_finally_008.php on line 7
